Tue Aug 12 12:57:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* vm_exec.c: improve performance in ppc64 arch.
	  [ruby-core:63437] [Feature #9997]

Tue Aug 12 12:14:52 2014  Akira Matsuda <ronnie@dio.jp>

	* lib/fileutils.rb: fix typo.
	  [ruby-dev:47831] [Bug #9180]

Tue Aug 12 10:10:42 2014  Eric Wong  <e@80x24.org>

	* vm_method.c (release_method_definition): use rb_free_method_entry

Tue Aug 12 06:16:09 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: seperate WIN32OLE_METHOD src from
	  win32ole.c.
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_method.c: ditto.
	* ext/win32ole/win32ole_method.h: ditto.
	* ext/win32ole/depend: ditto.

Mon Aug 11 22:19:15 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_variable.c (folevariable_inspect): refactoring.

Mon Aug 11 20:47:27 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: separate WIN32OLE_VARIABLE src from
	  win32ole.c
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_variable.c: ditto.
	* ext/win32ole/win32ole_variable.h: ditto.
	* ext/win32ole/depend: ditto.

Mon Aug 11 16:17:21 2014  Tony Miller  <mcfiredrill@gmail.com>

	* dir.c (rb_dir_exists_p): [DOC] Document that Dir.exists? is
	  deprecated.  [ruby-core:64135] [Bug #10102]

Mon Aug 11 11:26:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb: start rdoc parsing inside singleton class
	  definition to include the document there.
	  [ruby-core:64157] [Bug #10105]

Sun Aug 10 12:22:43 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_type.c: refactoring.

Sun Aug 10 10:34:00 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/cgi/session/pstore.rb: separated sample code.
	* lib/open3.rb: ditto.

Sun Aug 10 10:03:24 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/irb/ext/multi-irb.rb: removed commented-out code.

Sat Aug  9 11:02:07 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
